Updated release notes for ver 1.6

--- a/layouts/partials/sections/5_releasenotes.html
+++ b/layouts/partials/sections/5_releasenotes.html
@@ -6,7 +6,7 @@
         <div class="release-note">
           <span class="release-date">Dec 11, 2023</span>
           <span class="release-version">v1.6</span>
-          <span class="release-description">You can remove added photos. Import of big number of photos is much faster now.</span>
+          <span class="release-description">You can remove added photos. Import of big number of photos is much faster now. UI improvements.</span>
         </div>
           <div class="release-note">
             <span class="release-date">Dec 7, 2023</span>
