--- a/layouts/partials/sections/5_releasenotes.html
+++ b/layouts/partials/sections/5_releasenotes.html
@@ -4,40 +4,49 @@
       <div class="col-12 col-lg-8">
         <h2 class="fs-1 fw-bold text-center text-primary pb-3">Release Notes </h2>
         <div class="release-note">
+          <span class="release-date">Dec 13, 2023</span>
+          <span class="release-version">v1.7</span>
+          <span class="release-description">You can hide/show thumbnails.  UI
+            improvements.</span>
+        </div>
+        <div class="release-note">
           <span class="release-date">Dec 11, 2023</span>
           <span class="release-version">v1.6</span>
-          <span class="release-description">You can remove added photos. Import of big number of photos is much faster now. UI improvements.</span>
+          <span class="release-description">You can remove added photos. Import of big number of photos is much faster now. UI
+            improvements.</span>
         </div>
-          <div class="release-note">
-            <span class="release-date">Dec 7, 2023</span>
-            <span class="release-version">v1.5</span>
-            <span class="release-description">You can pause & resume a slideshow by pressing a spacebar.</span>
-          </div>
-          <div class="release-note">
-            <span class="release-date">Dec 5, 2023</span>
-            <span class="release-version">v1.4</span>
-            <span class="release-description">You can stop a slideshow from the main window. Even more UI improvements & bug fixes.</span>
-          </div>
-          <div class="release-note">
-            <span class="release-date">Dec 1, 2023</span>
-            <span class="release-version">v1.3</span>
-            <span class="release-description">UI improved a bit and a bugfix arrived.</span>
-          </div>
-          <div class="release-note">
-            <span class="release-date">Nov 26, 2023</span>
-            <span class="release-version">v1.2</span>
-            <span class="release-description">You can enable a smooth fade transition.</span>
-          </div>
-          <div class="release-note">
-            <span class="release-date">Nov 22, 2023</span>
-            <span class="release-version">v1.1</span>
-            <span class="release-description">Full-screen mode bug fixed. ESC button quits the slideshow. You can select directories and all photos inside will be added.</span>
-          </div>
-          <div class="release-note">
-            <span class="release-date">Oct 25, 2023</span>
-            <span class="release-version">v1.0</span>
-            <span class="release-description">Slideshower for macOS released to the public &#127881;</span>
-          </div>
+        <div class="release-note">
+          <span class="release-date">Dec 7, 2023</span>
+          <span class="release-version">v1.5</span>
+          <span class="release-description">You can pause & resume a slideshow by pressing a spacebar.</span>
+        </div>
+        <div class="release-note">
+          <span class="release-date">Dec 5, 2023</span>
+          <span class="release-version">v1.4</span>
+          <span class="release-description">You can stop a slideshow from the main window. Even more UI improvements & bug
+            fixes.</span>
+        </div>
+        <div class="release-note">
+          <span class="release-date">Dec 1, 2023</span>
+          <span class="release-version">v1.3</span>
+          <span class="release-description">UI improved a bit and a bugfix arrived.</span>
+        </div>
+        <div class="release-note">
+          <span class="release-date">Nov 26, 2023</span>
+          <span class="release-version">v1.2</span>
+          <span class="release-description">You can enable a smooth fade transition.</span>
+        </div>
+        <div class="release-note">
+          <span class="release-date">Nov 22, 2023</span>
+          <span class="release-version">v1.1</span>
+          <span class="release-description">Full-screen mode bug fixed. ESC button quits the slideshow. You can select
+            directories and all photos inside will be added.</span>
+        </div>
+        <div class="release-note">
+          <span class="release-date">Oct 25, 2023</span>
+          <span class="release-version">v1.0</span>
+          <span class="release-description">Slideshower for macOS released to the public &#127881;</span>
+        </div>
       </div>
     </div>
   </div>
