Fixed release notes for 1.7

--- a/layouts/partials/sections/5_releasenotes.html
+++ b/layouts/partials/sections/5_releasenotes.html
@@ -6,8 +6,7 @@
         <div class="release-note">
           <span class="release-date">Dec 13, 2023</span>
           <span class="release-version">v1.7</span>
-          <span class="release-description">You can hide/show thumbnails.  UI
-            improvements.</span>
+          <span class="release-description">You can hide/show thumbnails. You can use arrow keys to go to next/previous photo. Dark mode fixed.</span>
         </div>
         <div class="release-note">
           <span class="release-date">Dec 11, 2023</span>
