--- a/layouts/partials/sections/4_faq.html
+++ b/layouts/partials/sections/4_faq.html
@@ -18,11 +18,11 @@
           </div>
           <div class="faq-item">
             <h4 class="faq-question">How much does Slideshower cost?</h4>
-            <h5 class="faq-answer">SlideShower is free to use. You can support future development by <a href="https://www.buymeacoffee.com/slideshower">buying me a coffee</a> ☕</h5>
+            <h5 class="faq-answer">It's free to use. You can support future development by <a href="https://www.buymeacoffee.com/slideshower">buying me a coffee</a> ☕</h5>
           </div>
           <div class="faq-item">
             <h4 class="faq-question">How do I download Slideshower?</h4>
-            <h5 class="faq-answer">You can download Slideshower directly from this website. It's a lightweight app and simple to use.</h5>
+            <h5 class="faq-answer">You can download Slideshower <a href="#download">directly from this website</a>.</h5>
           </div>
           <div class="faq-item">
             <h4 class="faq-question">How to install Slideshower?</h4>
