--- a/layouts/partials/sections/6_download.html
+++ b/layouts/partials/sections/6_download.html
@@ -1,4 +1,4 @@
-<section class="section cta py-10">
+<section class="section cta py-10" id="#download">
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-10 col-xl-12">
