--- a/layouts/partials/sections/7_contact_form.html
+++ b/layouts/partials/sections/7_contact_form.html
@@ -13,8 +13,8 @@
       <div class="col-lg-6 col-10">
         <form action="https://formspree.io/f/xpzgbjvq" method="POST">
           <div class="form-group">
-              <input type="email" id="email" name="email" placeholder="Your email (so I can reply to you - no spam, no newsletters...)" class="form-control">
-              <textarea rows="7" name="message" placeholder="Something is not working? Feature is missing? Let me know." class="form-control mt-4"></textarea>
+              <input type="email" id="email" name="email" placeholder="Your email (so I can reply to you - no spam, no newsletters...)" class="form-control" required>
+              <textarea rows="7" name="message" placeholder="Something is not working? Feature is missing? Let me know." class="form-control mt-4" required></textarea>
           </div>
           <div class="text-center mt-4">
             <button type="submit" class="btn btn-outline-primary px-5">Send</button>
