--- a/layouts/partials/sections/5_releasenotes.html
+++ b/layouts/partials/sections/5_releasenotes.html
@@ -4,6 +4,11 @@
       <div class="col-12 col-lg-8">
         <h2 class="fs-1 fw-bold text-center text-primary pb-3">Release Notes </h2>
         <div class="release-note">
+          <span class="release-date">Jan 3, 2024</span>
+          <span class="release-version">v1.8</span>
+          <span class="release-description">App is now verified by Apple - easy installation. Auto-update functionality added.</span>
+        </div>
+        <div class="release-note">
           <span class="release-date">Dec 13, 2023</span>
           <span class="release-version">v1.7</span>
           <span class="release-description">You can hide/show thumbnails. You can use arrow keys to go to next/previous photo. Dark mode fixed.</span>
