Changed installation faq

--- a/layouts/partials/sections/4_faq.html
+++ b/layouts/partials/sections/4_faq.html
@@ -26,7 +26,7 @@
           </div>
           <div class="faq-item">
             <h4 class="faq-question">How to install Slideshower?</h4>
-            <h5 class="faq-answer">That's a bit tricky part. Download the file, and then right-click on it. Select 'Open' from the menu and choose the option of opening the app anyway. If you have problems, contact me at <a href="mailto:hello@slideshower.com">hello@slideshower.com</a></h5>
+            <h5 class="faq-answer">Download a dmg installation file and open it. Drag & drop Slideshower icon into the Application folder icon. And it's done! If you have problems, contact me at <a href="mailto:hello@slideshower.com">hello@slideshower.com</a></h5>
           </div>
           <div class="faq-item">
             <h4 class="faq-question">Which macOS versions are supported?</h4>
