Updated blog view

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -6,9 +6,18 @@
           {{ with .Title }}
             <h2 class="display-1 fw-bold text-center text-primary pb-3">{{ . }}</h2>
           {{ end }}
-          {{ with .Params.description }}
+          <p class="post-date text-center">{{ .Date.Format "January 2, 2006" }}</p> <!-- Date formatting -->
+      {{ if .Params.tags }}
+      <div class="post-tags text-center">
+        {{ range .Params.tags }}
+          <span class="tag">{{ . }}</span>
+        {{ end }}
+      </div>
+      {{ end }}
+      {{ with .Params.description }}
             <p class="text-black-61 text-center pb-3">{{ . }}</p>
           {{ end }}
+
         </div>
       </div>
       <div class="row pb-5">
