--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,36 +1,31 @@
 {{ define "main" }}
-  <section class="section blog-list py-5">
-    <div class="container">
-      <div class="row justify-content-center pb-5">
-        <div class="col-12 col-xl-6">
-          {{ with .Title }}
-            <h2 class="fs-1 fw-bold text-center text-primary pb-3">{{ . }}</h2>
-          {{ end }}
-          {{ with .Params.description }}
-            <p class="text-black-61 text-center pb-3">{{ . }}</p>
-          {{ end }}
-        </div>
-      </div>
-      <div class="row g-4 pb-5">
-        {{ range (.Paginate .RegularPages).Pages }}
-        <div class="col-12 col-md-6 col-lg-4">
-          <a class="card text-decoration-none h-100" href="{{ .Permalink }}">
-            <div class="aspect-ratio-62-5">
-              {{ with ( partial "utilities/get-featured-image.html" . ) }}
-                {{ partial "utilities/card-img-top" . }}
-              {{ end }}
-            </div>
-            <div class="card-body">
-              <h5 class="card-title fw-semibold">{{ .Title }}</h5>
-              <p class="card-text text-black-61">{{ .Summary | plainify }}</p>
-            </div>
-          </a>
-        </div>
+<section class="section blog-list py-5">
+  <div class="container">
+    <div class="row justify-content-center pb-5">
+      <div class="col-12 col-xl-6">
+        <h2 class="fs-1 fw-bold text-center text-primary pb-3">Blog</h2>
+        {{ with .Params.description }}
+          <p class="text-black-61 text-center pb-3">{{ . }}</p>
         {{ end }}
       </div>
-      <div class="row pb-5">
-        {{ template "_internal/pagination.html" . }}
+    </div>
+    <div class="row">
+      <div class="col-12 col-md-8 offset-md-2">
+        {{ range (.Paginate .RegularPages).Pages }}
+          <div class="post pb-5">
+            <h3 class="post-title fw-semibold">{{ .Title }}</h3>
+            <p class="post-date text-muted">{{ .Date.Format "January 2, 2006" }}</p>
+            <p class="post-summary">{{ .Summary | plainify }}</p>
+            <a href="{{ .Permalink }}" class="text-decoration-none">
+              <p class="read-more">Read more →</p>
+            </a>
+          </div>
+        {{ end }}
+        <div class="pagination-wrapper">
+          {{ template "_internal/pagination.html" . }}
+        </div>
       </div>
     </div>
-  </section>
+  </div>
+</section>
 {{ end }}
