Updated releasenotes to ver 1_13

--- a/layouts/partials/sections/5_releasenotes.html
+++ b/layouts/partials/sections/5_releasenotes.html
@@ -4,6 +4,11 @@
       <div class="col-12 col-lg-8">
         <h2 class="fs-1 fw-bold text-center text-primary pb-3">Release Notes </h2>
         <div class="release-note">
+          <span class="release-date">Apr 17, 2024</span>
+          <span class="release-version">v1.13</span>
+          <span class="release-description">Improved shuffle mode.</span>
+        </div>
+        <div class="release-note">
           <span class="release-date">Mar 29, 2024</span>
           <span class="release-version">v1.12</span>
           <span class="release-description">You can sort files (by name or creation date) before a slideshow. UI improvements.</span>
