Added blog post and updated sitemap.xml

--- a/assets/scss/sections/blog-single.scss
+++ b/assets/scss/sections/blog-single.scss
@@ -1,5 +1,14 @@
 .blog-content {
-  max-width: 900px;
+  max-width: 900px; /* This sets the maximum width of the blog content area */
+
+  img {
+    max-width: 80%; /* This will ensure that the image is never wider than the blog content area */
+    height: auto; /* This maintains the aspect ratio of the image */
+    display: block; /* Prevents inline spacing issues */
+    margin: 0 auto; /* Centers the image within the content area */
+    padding-bottom: 40px;
+    padding-top: 20px;
+  }
 
   .highlight {
     pre {
@@ -7,4 +16,15 @@
       border-radius: 8px;
     }
   }
+
+  h3 {
+    padding-top:30px;
+    padding-bottom:10px;
+  }
+
+  hr {
+    margin-top:30px;
+    margin-bottom:30px;
+  }
+
 }
