--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -15,7 +15,7 @@
           <div class="post pb-5">
             <h3 class="post-title fw-semibold">{{ .Title }}</h3>
             <p class="post-date text-muted">{{ .Date.Format "January 2, 2006" }}</p>
-            <p class="post-summary">{{ .Summary | plainify }}</p>
+            <p class="post-summary">{{ .Summary }}</p>
             <a href="{{ .Permalink }}" class="text-decoration-none">
               <p class="read-more">Read more →</p>
             </a>
