--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -4,19 +4,19 @@
       <div class="row justify-content-center pb-5">
         <div class="col-12">
           {{ with .Title }}
-            <h2 class="display-1 fw-bold text-center text-primary pb-3">{{ . }}</h2>
+            <h4 class="display-6 fw-bold text-center text-primary pb-3">{{ . }}</h4>
           {{ end }}
           <p class="post-date text-center">{{ .Date.Format "January 2, 2006" }}</p> <!-- Date formatting -->
-      {{ if .Params.tags }}
+      <!-- {{ if .Params.tags }}
       <div class="post-tags text-center">
         {{ range .Params.tags }}
           <span class="tag">{{ . }}</span>
         {{ end }}
       </div>
-      {{ end }}
-      {{ with .Params.description }}
+      {{ end }} -->
+      <!-- {{ with .Params.description }}
             <p class="text-black-61 text-center pb-3">{{ . }}</p>
-          {{ end }}
+          {{ end }} -->
 
         </div>
       </div>
