Added top padding to the blog post header template

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -4,7 +4,7 @@
       <div class="row justify-content-center pb-5">
         <div class="col-12">
           {{ with .Title }}
-            <h4 class="display-6 fw-bold text-center text-primary pb-3">{{ . }}</h4>
+            <h4 class="display-6 fw-bold text-center text-primary pb-3 pt-5">{{ . }}</h4>
           {{ end }}
           <p class="post-date text-center">{{ .Date.Format "January 2, 2006" }}</p> <!-- Date formatting -->
       <!-- {{ if .Params.tags }}
