Removed twitter timeline (it's not working ffs)

--- a/layouts/partials/shared/footer.html
+++ b/layouts/partials/shared/footer.html
@@ -1,7 +1,7 @@
 <footer class="shared footer bg-blue-light pb-1 pt-5">
   <div class="container">
     <div class="row pb-5 justify-content-center">
-      <div class="col-4 col-xl-4 text-center pb-4">
+      <div class="col-6 col-xl-4 text-center pb-4">
         <h4 class="fs-4 fw-semibold text-primary">{{ .Site.Title }}</h4>
         <p class="small text-black-61">{{ .Site.Params.description }}</p>
         <a class="small text-black-61 mb-5" href="{{ "privacy-policy" | relURL }}">Privacy Policy</a>
@@ -27,7 +27,7 @@
           {{ end }}
         </ul> 
       </div>-->
-      <div class="col-4 col-xl-4 text-center pb-4">
+      <div class="col-6 col-xl-4 text-center pb-4">
         <h5 class="fs-6 fw-semibold text-primary">Contact me</h5>
           <a class="small text-black-61 mb-1" href="mailto:hello@slideshower.com">hello@slideshower.com</a>
         <!-- {{ range .Site.Params.contact }}
@@ -42,11 +42,9 @@
         </ul>
         {{ end }}
       </div>
-        <div class="col-4 col-xl-4 text-center">
-          <!-- <script type="text/javascript" src="https://cdnjs.buymeacoffee.com/1.0.0/button.prod.min.js" data-name="bmc-button" data-slug="ptrybulski" data-color="#FFDD00" data-emoji="☕"  data-font="Cookie" data-text="Buy me a coffee" data-outline-color="#000000" data-font-color="#000000" data-coffee-color="#ffffff" ></script> -->
-          <a class="twitter-timeline" data-width="400" data-height="250" href="https://twitter.com/slideshowerMac?ref_src=twsrc%5Etfw">Tweets by slideshowerMac</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-
-        </div>
+        <!-- <div class="col-4 col-xl-4 text-center">
+          <script type="text/javascript" src="https://cdnjs.buymeacoffee.com/1.0.0/button.prod.min.js" data-name="bmc-button" data-slug="ptrybulski" data-color="#FFDD00" data-emoji="☕"  data-font="Cookie" data-text="Buy me a coffee" data-outline-color="#000000" data-font-color="#000000" data-coffee-color="#ffffff" ></script>
+        </div> -->
     </div>
 
     <div class="row justify-content-center">
