--- a/layouts/partials/head/_resources.html
+++ b/layouts/partials/head/_resources.html
@@ -11,4 +11,7 @@
 
 <link rel="stylesheet" href="{{ "css/custom.css" | relURL }}">
 
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
+
+
 <script>{{- $sharedJS.Content | safeJS -}}</script>
