--- a/layouts/partials/sections/4_faq.html
+++ b/layouts/partials/sections/4_faq.html
@@ -1,8 +1,8 @@
-<section class="section faq py-5" id="faq">
+<section class="section faq py-10" id="faq">
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-10 col-xl-10">
-        <h1 class="fs-1 fw-bold text-center text-primary pb-3">FAQ - Slideshower for macOS</h1>
+        <h1 class="fs-1 fw-bold text-center text-primary pb-4">FAQ</h1>
         <div class="faq-container">
           <div class="faq-item">
             <h4 class="faq-question">What is Slideshower?</h4>
@@ -18,7 +18,7 @@
           </div>
           <div class="faq-item">
             <h4 class="faq-question">How much does Slideshower cost?</h4>
-            <h5 class="faq-answer">It's free to use. You can support future development by <a href="https://www.buymeacoffee.com/slideshower">buying me a coffee</a> ☕</h5>
+            <h5 class="faq-answer">It's free to use up to 150 files. If you need to run a bigger slideshow, you can <a href="https://slideshower.lemonsqueezy.com/buy/1ca1b16c-3429-495e-b968-431dd333a66e">buy</a> a one-time license (I hate subscriptions) for $12 only.</h5>
           </div>
           <div class="faq-item">
             <h4 class="faq-question">How do I download Slideshower?</h4>
