--- a/layouts/partials/sections/5_releasenotes.html
+++ b/layouts/partials/sections/5_releasenotes.html
@@ -1,8 +1,13 @@
 <section class="section releasenotes py-5">
   <div class="container">
     <div class="row justify-content-center">
-      <div class="col-12 col-lg-8">
-        <h2 class="fs-1 fw-bold text-center text-primary pb-3">Release Notes </h2>
+      <div class="col-10 col-lg-8">
+        <h2 class="fs-1 fw-bold text-center text-primary pb-4">Release Notes </h2>
+        <div class="release-note">
+          <span class="release-date">May 24, 2024</span>
+          <span class="release-version">v1.14</span>
+          <span class="release-description">Bug fix: corrected issue in delay input box. Max. delay increased to 9999 seconds. Improved UI.</span>
+        </div>
         <div class="release-note">
           <span class="release-date">Apr 17, 2024</span>
           <span class="release-version">v1.13</span>
