--- a/layouts/partials/sections/3_features.html
+++ b/layouts/partials/sections/3_features.html
@@ -12,16 +12,16 @@
     </div>
     <div class="row g-5 justify-content-center">
       {{ range .content.cards }}
-        <div class="col-10 col-xl-4">
-          <div class="card shadow-sm bg-blue-16 border-radius-30 p-3">
-            {{ with .image }}{{ partial "utilities/image-fluid.html" . }}{{ end }}
-            <div class="card-body text-center">
-              {{ with .title }}<h4 class="card-title text-center text-primary pb-4">{{ . }}</h4>{{ end }}
-              {{ with .text | markdownify}}<p class="card-text text-black-61 pb-4">{{ . }}</p>{{ end }}
-              {{ with .button }}<a class="btn btn-outline-primary px-4" href="{{ .url }}">{{ .label }}</a>{{ end }}
-            </div>
+      <div class="col-10 col-xl-4 d-flex">
+        <div class="card shadow-sm bg-blue-16 border-radius-30 p-3 w-100 d-flex flex-column">
+          {{ with .image }}{{ partial "utilities/image-fluid.html" . }}{{ end }}
+          <div class="card-body text-center flex-fill">
+            {{ with .title }}<h4 class="card-title text-center text-primary pb-4">{{ . }}</h4>{{ end }}
+            {{ with .text | markdownify}}<p class="card-text text-black-61 pb-4">{{ . }}</p>{{ end }}
+            {{ with .button }}<a class="btn btn-outline-primary px-4" href="{{ .url }}">{{ .label }}</a>{{ end }}
           </div>
         </div>
+      </div>      
       {{ end }}
     </div>
   </div>
