--- a/assets/scss/sections/blog-single.scss
+++ b/assets/scss/sections/blog-single.scss
@@ -1,12 +1,13 @@
 .blog-content {
   max-width: 900px; /* This sets the maximum width of the blog content area */
+  font-size: 14px;
 
   img {
     max-width: 80%; /* This will ensure that the image is never wider than the blog content area */
     height: auto; /* This maintains the aspect ratio of the image */
     display: block; /* Prevents inline spacing issues */
     margin: 0 auto; /* Centers the image within the content area */
-    padding-bottom: 40px;
+    padding-bottom: 10px;
     padding-top: 20px;
   }
 
@@ -26,5 +27,24 @@
     margin-top:30px;
     margin-bottom:30px;
   }
+
+  .image-with-caption {
+    text-align: center; /* Centers the image and caption */
+    margin: 20px 0; /* Adds space around the whole container */
+  }
+  
+  .image-with-caption img {
+    max-width: 80%; /* Ensures the image is responsive and fits its container */
+    height: auto; /* Maintains the aspect ratio */
+  }
+  
+  .image-with-caption figcaption {
+    margin-top: 0px; /* Space between the image and the caption */
+    color: #666; /* Grey text color for the caption */
+    font-style: italic; /* Italic font style for captions */
+    font-size: 0.9em; /* Slightly smaller font size than the normal text */
+  }
+  
+
 
 }
