--- a/assets/scss/sections/blog-single.scss
+++ b/assets/scss/sections/blog-single.scss
@@ -18,9 +18,14 @@
     }
   }
 
-  h3 {
-    padding-top:30px;
+  h2, h3, h4 {
+    padding-top:40px;
     padding-bottom:10px;
+  }
+
+  h5 {
+    padding-top:10px;
+    padding-bottom:0px;
   }
 
   hr {
