--- a/layouts/partials/sections/5_releasenotes.html
+++ b/layouts/partials/sections/5_releasenotes.html
@@ -4,6 +4,11 @@
       <div class="col-10 col-lg-8">
         <h2 class="fs-1 fw-bold text-center text-primary pb-4">Release Notes </h2>
         <div class="release-note">
+          <span class="release-date">Jun 3, 2024</span>
+          <span class="release-version">v1.15</span>
+          <span class="release-description">Drag & drop is here! All files from subdirectories are automatically added to the app.</span>
+        </div>
+        <div class="release-note">
           <span class="release-date">May 24, 2024</span>
           <span class="release-version">v1.14</span>
           <span class="release-description">Bug fix: corrected issue in delay input box. Max. delay increased to 9999 seconds. Improved UI.</span>
