--- a/layouts/partials/sections/4_faq.html
+++ b/layouts/partials/sections/4_faq.html
@@ -30,7 +30,7 @@
           </div>
           <div class="faq-item">
             <h4 class="faq-question">Which macOS versions are supported?</h4>
-            <h5 class="faq-answer">Slideshower runs on macOS Ventura (13.5) and up.</h5>
+            <h5 class="faq-answer">Slideshower runs on macOS Monterey (12.0) and up.</h5>
           </div>
           <div class="faq-item">
             <h4 class="faq-question">Can I request new features for Slideshower?</h4>
