--- a/layouts/partials/sections/5_releasenotes.html
+++ b/layouts/partials/sections/5_releasenotes.html
@@ -4,6 +4,11 @@
       <div class="col-10 col-lg-8">
         <h2 class="fs-1 fw-bold text-center text-primary pb-4">Release Notes </h2>
         <div class="release-note">
+          <span class="release-date">Jun 12, 2024</span>
+          <span class="release-version">v1.16</span>
+          <span class="release-description">2x2 grid added. Additional sorting options. Min. mac OS required downgraded to 12.0</span>
+        </div>
+        <div class="release-note">
           <span class="release-date">Jun 3, 2024</span>
           <span class="release-version">v1.15</span>
           <span class="release-description">Drag & drop is here! All files from subdirectories are automatically added to the app.</span>
