--- a/layouts/partials/sections/5_releasenotes.html
+++ b/layouts/partials/sections/5_releasenotes.html
@@ -4,6 +4,11 @@
       <div class="col-10 col-lg-8">
         <h2 class="fs-1 fw-bold text-center text-primary pb-4">Release Notes </h2>
         <div class="release-note">
+          <span class="release-date">Jul 23, 2024</span>
+          <span class="release-version">v1.18</span>
+          <span class="release-description">Additional EXIF data (in the 'info overlay box'). Improved loop mode. Improved UX - better toast message about added files.</span>
+        </div>
+        <div class="release-note">
           <span class="release-date">Jun 24, 2024</span>
           <span class="release-version">v1.17</span>
           <span class="release-description">App settings are automatically saved & restored. You can display file info during a slideshow.</span>
