Fixed typo in release notes

--- a/layouts/partials/sections/5_releasenotes.html
+++ b/layouts/partials/sections/5_releasenotes.html
@@ -6,7 +6,7 @@
         <div class="release-note">
           <span class="release-date">Aug 2, 2024</span>
           <span class="release-version">v1.19</span>
-          <span class="release-description">Major app performance improvements (RAM usage & speed). Ken Burns effect added..</span>
+          <span class="release-description">Major app performance improvements (RAM usage & speed). Ken Burns effect added.</span>
         </div>
         <div class="release-note">
           <span class="release-date">Jul 23, 2024</span>
