Fixed problem with html tag in release notes

--- a/layouts/partials/sections/5_releasenotes.html
+++ b/layouts/partials/sections/5_releasenotes.html
@@ -7,7 +7,7 @@
           <span class="release-date">Aug 28, 2024</span>
           <span class="release-version">v2.0</span>
           <span class="release-description">You can export your slideshow to a video file.</span>
-        </div
+        </div>
         <div class="release-note">
           <span class="release-date">Aug 2, 2024</span>
           <span class="release-version">v1.19</span>
