Added info about how to activate license key

--- a/layouts/partials/sections/4_faq.html
+++ b/layouts/partials/sections/4_faq.html
@@ -29,6 +29,10 @@
             <h5 class="faq-answer">Download a dmg installation file and open it. Drag & drop Slideshower icon into the Application folder icon. And it's done! If you have problems, contact me at <a href="mailto:hello@slideshower.com">hello@slideshower.com</a></h5>
           </div>
           <div class="faq-item">
+            <h4 class="faq-question">How to activate the license key?</h4>
+            <h5 class="faq-answer">If you bought the license, you should get your license key in the email. Copy it, open the app and click the button "Enter license key" located in the bottom left corner of the app. Paste your license key and activate it.</h5>
+          </div>
+          <div class="faq-item">
             <h4 class="faq-question">Which macOS versions are supported?</h4>
             <h5 class="faq-answer">Slideshower runs on macOS Monterey (12.0) and up.</h5>
           </div>
