Updated pages for 2_1 release

--- a/layouts/partials/sections/5_releasenotes.html
+++ b/layouts/partials/sections/5_releasenotes.html
@@ -4,6 +4,11 @@
       <div class="col-10 col-lg-8">
         <h2 class="fs-1 fw-bold text-center text-primary pb-4">Release Notes </h2>
         <div class="release-note">
+          <span class="release-date">Oct 20, 2024</span>
+          <span class="release-version">v2.1</span>
+          <span class="release-description">'Live Mode' is here! Support for .webp & .avif files. </span>
+        </div>
+        <div class="release-note">
           <span class="release-date">Aug 28, 2024</span>
           <span class="release-version">v2.0</span>
           <span class="release-description">You can export your slideshow to a video file.</span>
