Fixed release notes

--- a/layouts/partials/sections/5_releasenotes.html
+++ b/layouts/partials/sections/5_releasenotes.html
@@ -6,7 +6,7 @@
         <div class="release-note">
           <span class="release-date">Oct 20, 2024</span>
           <span class="release-version">v2.1</span>
-          <span class="release-description">'Live Mode' is here! Support for .webp & .avif files. </span>
+          <span class="release-description">'Live Mode' added. File formats .webp & .avif file are supported now. </span>
         </div>
         <div class="release-note">
           <span class="release-date">Aug 28, 2024</span>
