--- a/layouts/partials/sections/5_releasenotes.html
+++ b/layouts/partials/sections/5_releasenotes.html
@@ -4,6 +4,11 @@
       <div class="col-10 col-lg-8">
         <h2 class="fs-1 fw-bold text-center text-primary pb-4">Release Notes </h2>
         <div class="release-note">
+          <span class="release-date">Nov 16, 2024</span>
+          <span class="release-version">v2.3</span>
+          <span class="release-description">Memory managment significantly improved (+ memory leak fixed). Minor UI bugs fixed.</span>
+        </div>
+        <div class="release-note">
           <span class="release-date">Oct 28, 2024</span>
           <span class="release-version">v2.2</span>
           <span class="release-description">Bug fix: shuffle mode not working properly. Mac sleep prevention and support for multiple Slideshower app instances.</span>
