--- a/layouts/partials/sections/4_faq.html
+++ b/layouts/partials/sections/4_faq.html
@@ -37,6 +37,14 @@
             <h5 class="faq-answer">Slideshower runs on macOS Monterey (12.0) and up.</h5>
           </div>
           <div class="faq-item">
+            <h4 class="faq-question">What file formats are supported?</h4>
+            <h5 class="faq-answer">Slideshower currently supports the following image formats: JPG/JPEG, PNG, HEIC, GIF, WebP, and AVIF.</h5>
+        </div>
+        <div class="faq-item">
+          <h4 class="faq-question">Can Slideshower handle folders with multiple subfolders?</h4>
+          <h5 class="faq-answer">Yes, Slideshower can import photos from folders containing multiple nested directories. When you select a folder, the app will automatically find and include all supported image files from the main folder and all of its subfolders, making it perfect for viewing huge photo collections organized in multiple directories.</h5>
+        </div>
+          <div class="faq-item">
             <h4 class="faq-question">Can I request new features for Slideshower?</h4>
             <h5 class="faq-answer">Yes! I am open to suggestions. If you need more features, <a href="#contact">reach out to me</a>, and I'll consider adding them.</h5>
           </div>
