--- a/layouts/partials/sections/4_faq.html
+++ b/layouts/partials/sections/4_faq.html
@@ -38,7 +38,7 @@
           </div>
           <div class="faq-item">
             <h4 class="faq-question">What file formats are supported?</h4>
-            <h5 class="faq-answer">Slideshower currently supports the following image formats: JPG/JPEG, PNG, HEIC, GIF, WebP, and AVIF.</h5>
+            <h5 class="faq-answer">Slideshower currently supports the following image formats: JPG/JPEG, PNG, HEIC, GIF, WebP, TIF, JXL and AVIF.</h5>
         </div>
         <div class="faq-item">
           <h4 class="faq-question">Can Slideshower handle folders with multiple subfolders?</h4>
