--- a/layouts/partials/icons/bluesky.html
+++ b/layouts/partials/icons/bluesky.html
@@ -1,4 +1,3 @@
-<svg  xmlns="http://www.w3.org/2000/svg"  width="16" height="16" fill="currentColor" class="bi bi-twitter" viewBox="0 0 16 16">
-  <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-  <path d="M6.335 5.144c-1.654 -1.199 -4.335 -2.127 -4.335 .826c0 .59 .35 4.953 .556 5.661c.713 2.463 3.13 2.75 5.444 2.369c-4.045 .665 -4.889 3.208 -2.667 5.41c1.03 1.018 1.913 1.59 2.667 1.59c2 0 3.134 -2.769 3.5 -3.5c.333 -.667 .5 -1.167 .5 -1.5c0 .333 .167 .833 .5 1.5c.366 .731 1.5 3.5 3.5 3.5c.754 0 1.637 -.571 2.667 -1.59c2.222 -2.203 1.378 -4.746 -2.667 -5.41c2.314 .38 4.73 .094 5.444 -2.369c.206 -.708 .556 -5.072 .556 -5.661c0 -2.953 -2.68 -2.025 -4.335 -.826c-2.293 1.662 -4.76 5.048 -5.665 6.856c-.905 -1.808 -3.372 -5.194 -5.665 -6.856z" />
+<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bluesky" viewBox="0 0 16 16">
+  <path d="M4.22 3.43c-1.1-.8-2.89-1.42-2.89.55 0 .39.23 3.3.37 3.77.48 1.64 2.09 1.83 3.63 1.58-2.7.44-3.26 2.14-1.78 3.61.69.68 1.28 1.06 1.78 1.06 1.33 0 2.09-1.85 2.33-2.33.22-.45.33-.78.33-1 0 .22.11.55.33 1 .24.48 1 2.33 2.33 2.33.5 0 1.09-.38 1.78-1.06 1.48-1.47.92-3.17-1.78-3.61 1.54.25 3.15.06 3.63-1.58.14-.47.37-3.38.37-3.77 0-1.97-1.79-1.35-2.89-.55-1.53 1.1-3.17 3.37-3.77 4.57-.61-1.2-2.25-3.46-3.77-4.57z"/>
 </svg>
